--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/pg": "^8.16.0",
+    "date-fns": "^4.1.0",
     "next": "16.0.5",
+    "pg": "^8.16.3",
+    "razorpay": "^2.9.6",
     "react": "19.2.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.0",
+    "resend": "^6.6.0",
     "sass": "^1.94.2"
   },
   "devDependencies": {
